<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">PetDiary</string>
    <string name="add_button">add button</string>
    <string name="fab">\u200B</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="toolbar_Product_Reviews">Pet Product Reviews </string>
    <string name="notification_icon_description">notification</string>
    <string name="Browse_product_by_pet_types">Browse product by pet types</string>
    <string name="most_reviews_products">5 Most Reviewed Products</string>
    <string name="scroll_horizontally_to_view_pet_options">Scroll horizontally to view pet options</string>
    <string name="browse_product_by_pet_types">Browse product by pet types</string>
    <string name="scroll_horizontally_to_view_product">scroll horizontally to view product</string>
    <string name="back_to_review_homepage_button">back_to_review_homepage_button</string>
    <string name="pet_category">Pet Category</string>
    <string name="choose_pet_category">Choose Pet Product Category</string>
    <string name="fish">Fish</string>
    <string name="hamster">Hamster</string>
    <string name="rabbit">Rabbit</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="bird">Bird</string>
    <string name="choose_product_category">Choose Product Category</string>
    <string name="back_to_choose_pet_category_page_button">back_to_choose_pet_category_page_button</string>
    <string name="grooming">Grooming</string>
    <string name="food">Food</string>
    <string name="health">Health</string>
    <string name="tools">Tools</string>
    <string name="others">Others</string>
    <string name="choose_product">Choose Product</string>
    <string name="search_product">Search product…</string>
    <string name="sort">Sort</string>
    <string name="back_to_choose_product_category_page_button">back_to_choose_product_category_page_button</string>
    <string name="fill_product_information">Fill Product Information</string>
    <string name="enter_brand_name">Enter Brand Name</string>
    <string name="product_name">Product Name</string>
    <string name="brand_name">Brand Name</string>
    <string name="upload_photo">upload photo</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="enter_product_description">Enter product description</string>
    <string name="submit">submit</string>
    <string name="back_to_choose_product_button">back_to_choose_product_button</string>
    <string name="give_review">Give a Review</string>
    <string name="give_your_overall_rating_for_this_product">Give Your Overall Rating For This Product</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="reviews">Reviews</string>
    <string name="back_to_review_landing_page">back_to_review_landing_page</string>
    <string name="product_categories">Product Categories</string>
    <string name="reviewed_this">People Reviewed This Product</string>
    <string name="users_recommend_this">Users Recommend This</string>
    <string name="product_description">Product Description</string>
    <string name="overall_rating">Overall Rating</string>
    <string name="back_to_products_page_button">back_to_products_page_button</string>
    <string name="see_more_reviews"><![CDATA[See more Reviews>>]]></string>
    <string name="back_to_product_page">back to product page</string>
    <string name="product_detail">Product Detail</string>
    <string name="add_a_review">Add a Review</string>
    <string name="back_to_product_categories_button">back_to_product_categories_button</string>
    <string name="product">Products</string>
    <string name="would_you_recommend_this_product">Would you recommend this product?</string>
    <string name="review_detail">Review Detail</string>
    <string name="back_to_product_detail_button">back_to_product_detail_button</string>
    <string name="usage_period">Usage Period</string>
    <string name="date">Date</string>
    <string name="how_long_have_you_used_it">How Long Have You Used It?</string>
    <string name="write_your_review_about_this_product">Write your review about \n this product</string>
    <string name="write_you_review_here">write you review here…</string>
    <string name="add_a_post">Add a Post</string>
    <string name="add_a_product">Add a Product</string>
    <string name="find_pet_shop_vet">Shop &amp; Vet</string>
    <string name="community">Community</string>
    <string name="article">Article</string>
    <string name="manage_pet">Manage Pet</string>
    <string name="manage_pet_poster">Manage Pet Poster</string>
    <string name="review_n">Review</string>
    <string name="community_n">Community</string>
    <string name="article_n">Article</string>
    <string name="sort_by">Sort by</string>
    <string name="popular">Popular</string>
    <string name="highest_rating">Highest Rating</string>
    <string name="newest">Newest</string>
    <string name="newest_review">Newest Review</string>
    <string name="oldest_review">Oldest Review</string>
    <string name="lowest_rating">Lowest Rating</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="back_to_product_detail_page">back to product detail page\n</string>
    <string name="back_to_detail_product_page" />
    <string name="back_to_detail_reviews_page" />
    <string name="back_to_choose_product_category">back_to_choose_product_category</string>
    <string name="hide_bottom_view_on_scroll" />
    <string name="title_activity_main">MainActivity</string>
    <string name="back_button">back_button</string>
    <string-array name="usage_options" tools:ignore="InconsistentArrays">
        <item>Select Usage Product</item>
        <item>Using this product for the first time</item>
        <item>1 week - 1 month</item>
        <item>2 – 6 months</item>
        <item>More than one year</item>
        <item>Less than a week</item>
    </string-array>
    <string-array name="article_category">
        <item>Select Article Category</item>
        <item>Care and Health</item>
        <item>Training</item>
        <item>Event</item>
    </string-array>
    <string name="my_profile_edit">Edit My Profile</string>
    <string name="home_name_user">Hi! %1$s</string>
    <string name="care_and_health">Care and Health</string>
    <string name="training">Training</string>
    <string name="community_events">Event</string>
    <string name="all">All</string>
    <string name="back_to_article_homepage">back to article homepage</string>
    <string name="share_via">Share via</string>
    <string name="pentingnya_perawatan_kesehatan_rutin_untuk_kucing_kesayangan_anda">Pentingnya Perawatan Kesehatan Rutin untuk Kucing Kesayangan Anda</string>
    <string name="age_pet">%1$d Month</string>
    <string name="description">Description</string>
    <string name="gender">Gender</string>
    <string name="age">Age (Month) </string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry</string>
    <string name="toolbar_pet_detail">Pet Detail</string>
    <string name="toolbar_change_language">Change Language</string>
    <string name="same_on_system">Same on System</string>
    <string name="language_english">English</string>
    <string name="indonesian">Indonesian</string>
    <string name="image_system_cd">Image System</string>
    <string name="image_check_system_cd">Image Check System</string>
    <string name="image_english_cd">Image English</string>
    <string name="image_check_english_cd">Image Check English</string>
    <string name="image_indonesian_cd">Image Indonesian</string>
    <string name="image_check_indonesian_cd">Image Check Indonesian</string>
    <string name="image_pet_cd">Image Pet</string>
    <string name="delete">Delete</string>
    <string name="pet_name">Pet Name</string>
    <string name="pet_type">Type or Species</string>
    <string name="pet_edit_btn">Edit</string>
    <string name="help_support">Help &amp; Support</string>
    <string name="contact_us">Contact Us</string>
    <string name="email_pet_diary">akupetdiary@gmail.com</string>
    <string name="open_email">Open Email</string>
    <string name="faq">FAQ</string>
    <string name="faq_1">Can I delete comments on a post?</string>
    <string name="faq_1_1">You can delete comments on a post by swiping the comment to the left</string>
    <string name="faq_2">What If I Forget My Password?</string>
    <string name="faq_2_1">1. Use the Forgot Password option in Sign In to reset it</string>
    <string name="faq_2_2">2. Enter your email to send the password reset link</string>
    <string name="faq_2_3">3. Open Email and click the reset password link</string>
    <string name="faq_2_4">4. Enter a new password</string>
    <string name="faq_3">What If Im Stuck at the Loading Screen?</string>
    <string name="faq_3_1">1. Make sure your internet connection is stable</string>
    <string name="faq_3_2">2. Close the application and reopen it after a few moments</string>
</resources>